# child-monitor-analyzer

./: .gitignore  LICENSE  README.md  monitor-gui.spec  pyproject.toml  requirements.txt
data/: he_profanity.txt  he_profanity_soft.txt
docs/: README.html
src/: run_gui.py
src/monitor/: __init__.py  __main__.py  analysis_worker.py  audio_events.py  cli.py  model_cache.py  models.py  pipeline.py  profanity.py  stt.py
src/monitor/gui/: __init__.py  audio_player.py  main_window.py  player_icons.py  report_table.py  sensitivity_panel.py  strings.py  transcript_widget.py
