[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "child-monitor-analyzer"
version = "1.1.0"
description = "Child audio monitoring tool — detects profanity, shouting, crying and more with precise timestamps"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "panns-inference>=0.1.0",
    "librosa>=0.10.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "PySide6>=6.5.0",
    "numpy>=1.24.0",
]

[project.scripts]
monitor = "monitor.cli:main"
monitor-gui = "monitor.gui.main_window:run_gui"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
